# hue

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
hue/: __init__.py  bridge.py  cli.py  color.py  config.py  models.py  schedule.py
tests/: test_change.py  test_color.py  test_config.py  test_models.py  test_schedule.py
