[project]
name = "hue"
version = "1.0"
description = "A command-line tool to control Philips Hue lights via the Bridge's local CLIP v2 API"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Thomas Chung" }]
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
hue = "hue.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hue*"]
